--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,6 +1,3 @@
-<head>
-  <%= include_gon %>
- </head>
 <div class="content">
     <% content_for(:page_title) { 'Create your trip!' } %>
         <% if current_user %>
@@ -72,7 +69,7 @@
                     <h2><img style="max-width:200px;" src="//i.imgur.com/pjs3K1M.jpg">TRAVEL PACKING ASSISTANT</h2>
                     <p>This is an application for generating a personalized packing list with custom items for packing</p>
                 </div>
-                <img id="homepic" src="//blogdotgofoxdotcom.files.wordpress.com/2014/10/cropped-cropped-world-travel1.jpg">
+                <img id="homepic" src="">
                 <div class="text-center">
                     <div style="height: 400px"></div>
                     <div>
