--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,6 @@
 
 *= require_self
 *= require jquery-ui
-*= require font-awesome
 *= require_tree .
 */
 
@@ -26,6 +25,17 @@ body {
   padding:0;
   height:100%;
 }
+body {
+    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+/*body { 
+  background: url(/assets/travel-background.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}*/
 
 /*.jumbotron {
   margin-top: 80px;
@@ -601,6 +611,9 @@ left: 63px;
 .modal-content {
   width: 500px;
 }
+.modal-dialog {
+  margin-left: 400px !important;
+}
 #login-btn, #signup-btn {
   background: #455A64 !important;
   height: 40px !important;
@@ -620,4 +633,42 @@ ul.navbar-nav li, .navbar-header {
 .well {
  /* padding: 15px !important; */
   margin-bottom: 0px !important;
+}
+
+
+
+.header {
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url('/assets/bg.jpg') no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+.text-vertical-center {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.text-vertical-center h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 4.5em;
+    font-weight: 700;
+}
+.btn-dark {
+    border-radius: 0;
+    color: white;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.btn-dark:hover,
+.btn-dark:focus,
+.btn-dark:active {
+    color: white !important;
+    background-color: rgba(0,0,0,0.7);
 }
