fixed weather and map size

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </head>
   <body>
     <script type="text/javascript">
-    <%= include_gon :watch => true, :init => true, :need_tag => false %>
+    // <%= include_gon :watch => true, :init => true, :need_tag => false %>
   </script>
 
     <%= render "layouts/header" %>
@@ -28,7 +28,7 @@
     </div>
          <%= render "layouts/footer" %>
 
-    <!-- script src="//code.jquery.com/jquery-2.1.4.js"></script -->
+<!--     <script src="//code.jquery.com/jquery-2.1.4.js"></script> -->
     <!-- script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script -->
     <!-- script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script -->
     <!-- script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.0.0/mustache.js"></script -->
