changes main fonts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,16 +22,16 @@ h1 span{
 
 h4 span {
 	margin: 40px;
-	font-family: Helvetica;
+	font-family: 'Raleway', cursive;
 	background-color: rgba(224,247,250 ,0.9);
 	padding: 10px 50px 10px 50px;
 	color: #37474F;
 }
 
 
-/*body {
+body {
 font-family: 'Raleway', cursive !important;
-}*/
+}
 /*
 h1, h2, h3 ,h4 {
 font-family: 'Raleway', cursive !important;
