--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -4,7 +4,9 @@ font-family: 'Raleway', cursive;
 } */
 #trips .calendar {
   border-collapse: collapse;
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
+  height: 80%;
 
   td, th {
    font-family: 'Raleway', cursive;
@@ -14,10 +16,10 @@ font-family: 'Raleway', cursive;
   }
 
   th {
-    background: rgba(22, 160, 133,1.0);
+    background: #26ccce;
     color: white;
     text-align: center;
-    font-size: 130%;
+    font-size: 80%;
     width: 14.2857142857143%;
   }
 
@@ -26,7 +28,7 @@ font-family: 'Raleway', cursive;
     color: #777;
     height: 80px;
     vertical-align: top;
-    font-size: 16px;
+    font-size: 80%;
   }
 
   .notmonth, .notmonth a { color: #CCC; }
@@ -35,12 +37,13 @@ font-family: 'Raleway', cursive;
 
 a {
   color: rgba(211, 84, 0,1.0);
+  font-size: 16px;
 }
 #trips #month {
   margin: 0;
   padding-bottom: 10px;
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
   color: rgba(211, 84, 0,1.0);
   a {
     text-decoration: none;
@@ -50,6 +53,6 @@ a {
 }
 
 #trips ul {
-  font-size: 16px;
+  font-size: 10px;
   padding-left: 20px;
 }
