added currency converter

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,3 +42,12 @@ font-family: 'Raleway', cursive !important;
   background-color: #42CAAB !important;
   border-color: #357ebd;
 }*/
+.ui-datepicker .ui-datepicker-title {
+	color: tomato;
+	background-color: black;
+	margin: 0;
+	border-radius: 3px;
+}
+.ui-datepicker-week-end {
+	color: tomato;
+}
