--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -20,5 +20,5 @@
       <% end %>
     </div>
 <br>
-      <%=link_to 'ADD A TRIP'.html_safe, "/", class: "btn btn-weather location" %>
+      <%=link_to 'PLAN NEW TRIP'.html_safe, "/", class: "btn btn-weather location" %>
 </div>
