--- a/app/views/currency/index.html.erb
+++ b/app/views/currency/index.html.erb
@@ -1,3 +1,22 @@
 <div class="content">
-<h3>Page Under Construction... </h3>
+
+<h3>CHOOSE CURRENCY TO CONVERT</h3>
+<select name="" id="from_currency" class="currency">
+	<option selected="selected" disabled="disabled">CONVERT FROM</option>
+</select>
+
+<label for="amount">AMOUNT</label>
+<input type="text" class="amount" value="1">
+
+
+<select name="" id="to_currency" class="currency">
+<option selected="selected" disabled="disabled">CONVERT TO</option>
+</select>
+
+<button class="convert">CONVERT</button>
+<br>
+<label for="currency_result">RESULT</label>
+<div class="currency_result"></div>
+
+
 </div>
