--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
           <span class="icon-bar"></span>
           </button>
           <%= link_to '<i class="fa fa-home fa-2x"></i>'.html_safe, root_path, class: "navbar-brand", id: "home" %>
-          <%= link_to '   ADD NEW TRIP'.html_safe, root_path, class: "navbar-brand" %>
+          <%= link_to '   PLAN NEW TRIP'.html_safe, root_path, class: "navbar-brand" %>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
