--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -32,7 +32,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="date">Start Date</label>
-                                    <%= f.text_field  :start_date, placeholder: "Select Start Date", class: "datepicker form-control date" %>
+                                    <%= f.text_field  :start_date, placeholder: "Select Start Date", class: "datepicker ll-skin-cangas form-control date" %>
                                         </div>
                                         <div class="form-group">
                                             <label for="date">End Date</label>
