--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -672,3 +672,59 @@ ul.navbar-nav li, .navbar-header {
     color: white !important;
     background-color: #22a8aa;
 }
+
+
+.mainselection select {
+   border: 0;
+   color: #EEE;
+   background: transparent;
+   font-size: 18px;
+   font-weight: bold;
+   padding: 2px 10px;
+   width: 378px;
+   *width: 350px;
+   *background: #58B14C;
+   -webkit-appearance: none;
+}
+
+.mainselection {
+   overflow:hidden;
+   width:350px;
+   -moz-border-radius: 9px 9px 9px 9px;
+   -webkit-border-radius: 9px 9px 9px 9px;
+   border-radius: 9px 9px 9px 9px;
+   box-shadow: 1px 1px 11px #330033;
+   background: #4DB6AC url("http://i62.tinypic.com/15xvbd5.png") no-repeat scroll 319px center;
+}
+
+.btn-currency {
+   border-radius: 9px 9px 9px 9px;
+   box-shadow: 1px 1px 11px #330033;
+   width:150px;
+  background-color: hsl(164, 0%, 5%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f3f3f", endColorstr="#0c0c0c");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#3f3f3f), to(#0c0c0c));
+  background-image: -moz-linear-gradient(top, #3f3f3f, #0c0c0c);
+  background-image: -ms-linear-gradient(top, #3f3f3f, #0c0c0c);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3f3f3f), color-stop(100%, #0c0c0c));
+  background-image: -webkit-linear-gradient(top, #3f3f3f, #0c0c0c);
+  background-image: -o-linear-gradient(top, #3f3f3f, #0c0c0c);
+  background-image: linear-gradient(#3f3f3f, #0c0c0c);
+  border-color: #0c0c0c #0c0c0c hsl(164, 0%, 0%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+  -webkit-font-smoothing: antialiased;
+}
+
+.amount-style input[type="text"] {
+  border-radius: 5px;
+  padding: 8px;
+  border: solid 1px green;
+  transition: box-shadow 0.3s, border 0.3s;
+}
+.amount-style input[type="text"]:focus,
+.amount-style input[type="text"].focus {
+  border: solid 1px black;
+  box-shadow: 0 0 5px 1px green;
+}
