--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
             <li ><%= link_to "MY CALENDAR", calendar_path %></li>
             <li ><%= link_to "MY TRIPS", trips_path %></li>
             <li ><%= link_to "CURRENCY CONVERTER", currency_path %></li>
-            <li ><%= link_to "TRAVEL TIPS & TRICKS", blog_path %></li>
+            <li ><%= link_to "TRAVEL TIPS", blog_path %></li>
 
 
     
